--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <title>LifeStyle Store</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/Style.css">
+        <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Tangerine">
     </head>
     <body>
-        <div class="header" >      <!--  header section-->
+        <header class="header" >      <!--  header section-->
             <div class="inner_header">
                 <div class="logo">
                     <a href="#"> Lifestyle Store</a>
@@ -18,22 +20,24 @@
                     <a href="#">Login</a>
                 </div>
             </div>
-        </div>
+        </header><!--end of the header section-->
+        
         <div class="content">    <!--  image in the center-->
             <div class="banner-image">
                 <div class="inner-banner-image">
                     <div class="banner_content">
                         <h1>We sell lifestyle.</h1>
-                        <p>Flat 40% OFF on premium brands. </p>
+                        <p><span>Flat 40% off on premium brands.</span> </p>
                         <button class="button" type="button">Shop Now</button> 
                     </div>  
+                </div>
             </div>
-        </div>
-        </div>
+        </div><!-- end of the image -->
+
         <div class="container"><!-- various items in the store-->
              <div class="items">   
                  <a href="#" >   
-                     <img src="img/2.jpg" class="height_image" alt="" class="thumbnail">  
+                     <img src="img/2.jpg" class="height_image" alt="">  
                      <div class="caption">                   
                          <h2>Watches</h2>             
                          <p>Watches from the best brands.</p>     
@@ -58,7 +62,8 @@
                      </div>           
                  </a>          
              </div> 
-         </div>
+         </div><!--end of the items in the store-->
+
         <footer>   <!--footer section-->
             <div class="container">
                 <p>Copyright Lifestyle Store. All Rights Reserved | Contact Us: +91 00000 00000.</p>
