--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>LifeStyle Store</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="Description" content="Author: Jaswanth,
+    Illustrator: P. Picture, Category: Books
+    Length: 784 pages">
         <link rel="stylesheet" type="text/css" href="css/Style.css">
         <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Tangerine">
